cliPattern manages shared pattern config

--- a/package/package.json
+++ b/package/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@musical-patterns/pattern-zdaubyaos",
-  "version": "1.0.22",
+  "version": "1.0.23",
   "main": "index.js",
   "typings": "index.d.ts",
   "license": "MIT",
@@ -16,5 +16,8 @@
   },
   "peerDependencies": {
     "@musical-patterns/performer": "^1.0.92"
+  },
+  "devDependencies": {
+    "@musical-patterns/cli-pattern": "^1.0.6"
   }
 }
