--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@musical-patterns/pattern-zdaubyaos",
-  "version": "1.0.31",
-  "main": "index.js",
-  "typings": "index.d.ts",
+  "version": "1.0.32",
+  "main": "dist/index.js",
+  "typings": "dist/index.d.ts",
   "license": "MIT",
   "repository": {
     "type": "git",
